stream_extractor/archive: crash if libarchive fails to be created
Easily reproducible with attachment:not_an_archive.txt and referring to an obviously missing identifier.
vlc-devel --branch trunk 'file:///tmp/not_an_archive.txt#!/missing'
Thread 5 "vlc-static" received signal SIGSEGV, Segmentation fault.
[Switching to Thread 0x7fffeca28700 (LWP 454)]
archive_seek_subentry (p_sys=p_sys@entry=0x0, psz_subentry=0x7fffd4000f00 "missing") at modules/stream_extractor/archive.c:336
[#0](https://code.videolan.org/videolan/vlc/-/issues/0) archive_seek_subentry (p_sys=p_sys@entry=0x0, psz_subentry=0x7fffd4000f00 "missing") at modules/stream_extractor/archive.c:336
[#1](https://code.videolan.org/videolan/vlc/-/issues/1) 0x00007ffff06754f1 in ExtractorOpen (p_obj=0x7fffd4000cd8, p_obj@entry=<error reading variable: value has been optimized out>) at modules/stream_extractor/archive.c:697
[#2](https://code.videolan.org/videolan/vlc/-/issues/2) 0x00007ffff78ec132 in generic_start (func=<optimized out>, ap=ap@entry=0x7fffeca27a38) at src/modules/modules.c:349
[#3](https://code.videolan.org/videolan/vlc/-/issues/3) 0x00007ffff78ec1c1 in module_load (obj=obj@entry=0x7fffd4000cd8, m=m@entry=0x646180, init=init@entry=0x7ffff78ec114 <generic_start>, args=args@entry=0x7fffeca27ae0) at src/modules/modules.c:183
[#4](https://code.videolan.org/videolan/vlc/-/issues/4) 0x00007ffff78ec75b in vlc_module_load (obj=0x7fffd4000cd8, capability=0x7ffff7984926 "stream_extractor", name=0x7ffff7972e78 "", name@entry=0x0, strict=strict@entry=true, probe=probe@entry=0x7ffff78ec114 <generic_start>) at src/modules/modules.c:275
[#5](https://code.videolan.org/videolan/vlc/-/issues/5) 0x00007ffff78ecc56 in module_need (obj=<optimized out>, cap=<optimized out>, name=name@entry=0x0, strict=strict@entry=true) at src/modules/modules.c:364
[#6](https://code.videolan.org/videolan/vlc/-/issues/6) 0x00007ffff7925f8c in StreamExtractorAttach (source=source@entry=0x7fffeca27cb0, identifier=identifier@entry=0x7fffd4000f30 "missing", module_name=module_name@entry=0x0) at src/input/stream_extractor.c:317
[#7](https://code.videolan.org/videolan/vlc/-/issues/7) 0x00007ffff7926096 in vlc_stream_extractor_Attach (source=source@entry=0x7fffeca27cb0, identifier=identifier@entry=0x7fffd4000f30 "missing", module_name=module_name@entry=0x0) at src/input/stream_extractor.c:340
[#8](https://code.videolan.org/videolan/vlc/-/issues/8) 0x00007ffff791c8cb in InputStreamHandleAnchor (anchor=<optimized out>, stream=0x7fffeca27cb0, source=0x7fffd4000b38) at src/input/input.c:2281
[#9](https://code.videolan.org/videolan/vlc/-/issues/9) InputDemuxNew (psz_anchor=<optimized out>, psz_path=0x7fffd4000bc7 "/tmp/not_an_archive.txt", psz_demux=0x7fffd4000a60 "any", psz_access=0x7fffd4000bc0 "file", p_source=0x7fffd4000b38, p_input=<optimized out>) at src/input/input.c:2357
[#10](https://code.videolan.org/videolan/vlc/-/issues/10) InputSourceNew (p_input=p_input@entry=0x7fffd0000978, psz_mrl=0x6f2f40 "file:///tmp/not_an_archive.txt#!/missing", psz_forced_demux=psz_forced_demux@entry=0x0, b_in_can_fail=b_in_can_fail@entry=false) at src/input/input.c:2475
[#11](https://code.videolan.org/videolan/vlc/-/issues/11) 0x00007ffff791eeae in Init (p_input=p_input@entry=0x7fffd0000978) at src/input/input.c:1308
[#12](https://code.videolan.org/videolan/vlc/-/issues/12) 0x00007ffff7920b43 in Preparse (data=0x7fffd0000978) at src/input/input.c:512
[#13](https://code.videolan.org/videolan/vlc/-/issues/13) 0x00007ffff6d082e7 in start_thread () from /usr/lib/libpthread.so.0
[#14](https://code.videolan.org/videolan/vlc/-/issues/14) 0x00007ffff684554f in clone () from /usr/lib/libc.so.6