se/archive: ExtractorOpen: add missing error-check in open

The same check is correctly implemented in archive.c:DirectoryOpen,
but is missing from ExtractorOpen - resulting in a null-pointer
dereference if a libarchive handle fails to be created.

fixes: #18133

Signed-off-by: Jean-Baptiste Kempf <jb@videolan.org>